--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -12,19 +12,37 @@ color: #aa0000;
 .develop {
 color: #ff9900;
 }
-</style></head>
+</style>
+</head>
 <body>
 <h1>Version 0.7.2 (11/??/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-<li>Minor improvement in check mode (Changing the date field automatically selects the box "Change value date by").</li><li>The "filter" menu is now hidden when the "Account statements" tab is selected (the filter is ignored in this view).</li><li>Adds "receipts" and "expenses" check boxes in the "customized filter" dialog.</li><li>The Yapbam directory structure is changed to match the PortableApps.com format.</li></ul>
+<li>Minor improvement in check mode (Changing the date field
+automatically selects the box "Change value date by").</li>
+<li>The "filter" menu is now hidden when the "Account
+statements" tab is selected (the filter is ignored in this view).</li>
+<li>Adds "receipts" and "expenses" check boxes in the
+"customized filter" dialog.</li>
+<li>The Yapbam directory structure is changed to match the
+PortableApps.com format.</li>
+<li><span class="bugFix">Minor bugs fixed</span> in the "customized filter" dialog.</li>
+</ul>
 <hr>
 <h1>Older releases</h1>
 <h2>Version 0.7.1 (11/09/2010)</h2>
-<ul><li>Performance improvement: Adminitsration tasks are  far
-faster than in previous versions (for instance, deletion of an account or a category).</li><li><span class="bugFix">Fixes a minor bug</span>: In some countries,
+<ul>
+<li>Performance improvement: Adminitsration tasks are far
+faster than in previous versions (for instance, deletion of an account
+or a category).</li>
+<li><span class="bugFix">Fixes a minor bug</span>:
+In some countries,
 the parsing of grouping separator in monetary values was wrong (ie, in
-France 5 000,00 wasn't considered as a valid value).&nbsp;</li><li><span class="bugFix">Fixes a major bug</span>: Sometimes, import&nbsp; did ... nothing ! :-(</li></ul><h2>Version 0.7.0 (10/17/2010)</h2>
+France 5 000,00 wasn't considered as a valid value).&nbsp;</li>
+<li><span class="bugFix">Fixes a major bug</span>:
+Sometimes, import&nbsp; did ... nothing ! :-(</li>
+</ul>
+<h2>Version 0.7.0 (10/17/2010)</h2>
 <ul>
 <li>Adds a "bank statements" view.</li>
 <li>When lauching Yapbam, the transactions table is
