--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -19,7 +19,8 @@ color: #ff9900;
 <h1>Version 0.7.2 (??/11/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li>Amélioration mineure du mode pointage (la modification du champ date coche automatiquement "Remplacer la date de valeur par").</li><li>Le menu "filtre" est à présent caché dans la vue "Relevés de compte" (cette vue ne prend pas en compte le filtrage).</li><li>Ajout de cases à cocher "Dépenses" et "Recettes" dans le dialogue "Filtre personnalisé".</li><li>La structure du répertoire contenant l'application est modifiée pour correspondre à celle de PortableApps.com.</li></ul>
+  <li>Amélioration mineure du mode pointage (la modification du champ date coche automatiquement "Remplacer la date de valeur par").</li><li>Le menu "filtre" est à présent caché dans la vue "Relevés de compte" (cette vue ne prend pas en compte le filtrage).</li><li>Ajout de cases à cocher "Dépenses" et "Recettes" dans le dialogue "Filtre personnalisé".</li><li>La structure du répertoire contenant l'application est modifiée pour correspondre à celle de PortableApps.com.</li><li><span class="bugFix">Correction de
+bugs mineurs</span>&nbsp;dans le dialogue "Filtre personnalisé".</li></ul>
 <hr>
 <h1>Versions précédentes</h1>
 <h2>Version 0.7.1 (09/11/2010)</h2><ul><li>Amélioration de performance : Les tâches d'administration
@@ -62,7 +63,7 @@ d'importation.</li>
 ligne est considérée comme une erreur).</li>
 </ul>
 </li>
-<li><span class="bugFix">Corrections de
+<li><span class="bugFix">Correction de
 bugs</span> dans l'onglet d'historique du solde :
 <ul>
 <li>Parfois, la date courante n'était pas visible dans la
