--- a/helpPages/portable/help.html
+++ b/helpPages/portable/help.html
@@ -16,6 +16,7 @@ Yapbam, un gestionnaire de comptes personnels simple mais
 puissant. Vous pouvez l'installer sur un disque externe ou une clef USB
 et l'exécuter sur n'importe quel PC.</p>
 <p>Pour en savoir plus, visitez le site de <a href="http://www.yapbam.net">Yapbam</a>.</p>
+<p>Vous pouvez tester Yapbam en ouvrant l'un des fichiers de test présents dans le dossier <a href="Other/samples">Other/samples</a>.</p>
 <h2>Questions fréquentes sur Yapbam</h2>
 <ul>
 <li><a href="http://www.yapbam.net/fr/doc/index.php#q1">Yapbam&nbsp;est-il gratuit ?</a></li>
@@ -32,6 +33,7 @@ et l'exécuter sur n'importe quel PC.</p>
 simple but powerfull account manager. You can install it on a USB drive
 or key and use it on every PC you want.</p>
 <p>Lean more about <a href="http://www.yapbam.net">Yapbam</a>.</p>
+<p>You could test Yapbam with one of the test files in the <a href="Other/samples">Other/samples</a> folder.</p>
 <h2>Yapbam frequently asked questions</h2>
 <ul>
 <li><a href="http://www.yapbam.net/fr/doc/index.php#q1">Is Yapbam free ?</a></li>
