--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -14,7 +14,7 @@ color: #ff9900;
 }
 </style></head>
 <body>
-<h1>Version 0.7.2 (11/??/2010)</h1>
+<h1>Version 0.7.2 (11/23/2010)</h1>
 <h2>New in this version</h2>
 <ul>
 <li>Minor improvement in check mode (Changing the date field
