--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -14,10 +14,9 @@ color: #AA0000;
 color: #ff9900;
 }
 -->
-</style>
-</head>
+</style></head>
 <body>
-<h1>Version 0.7.2 (??/11/2010)</h1>
+<h1>Version 0.7.2 (23/11/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
 <li>Amélioration mineure du mode pointage (la modification du
