--- a/helpPages/portable/help.html
+++ b/helpPages/portable/help.html
@@ -9,7 +9,7 @@
 <body>
 <div class="logo"><img src="Other/help/images/help_logo_top.png" alt="Yapbam" height="47" width="229"/></div>
 <div class="content">
-<div id="french" style="display:none">
+<div id="fr" style="display:none">
 <h1>Aide Yet Another Bank Account Manager Portable</h1>
 <p>Yapbam portable est la distribution portable de
 Yapbam, un gestionnaire de comptes personnels simple mais
@@ -27,7 +27,7 @@ et l'exécuter sur n'importe quel PC.</p>
 <li><a href="http://www.yapbam.net/fr/doc/index.php#q6">Puis-je aider Yapbam ?</a></li>
 </ul>
 </div>
-<div id="english">
+<div id="en">
 <h1>Portable Yet Another Bank Account Manager help</h1>
 <p>Yapbam portable is the portable distribution of Yapbam, a
 simple but powerfull account manager. You can install it on a USB drive
@@ -52,8 +52,8 @@ if (navigator.browserLanguage) { /* Microsoft case */
 	var language = navigator.language;
 }
 if (language.indexOf('fr') > -1) {
-	document.getElementById("english").style.display="none";
-	document.getElementById("french").style.display="block";
+	document.getElementById("en").style.display="none";
+	document.getElementById("fr").style.display="block";
 }
 </script>
 <div class="footer"/>
