--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -16,12 +16,22 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.7.3 (26/11/2010)</h1>
-<h2>Nouveautés de cette version</h2><ul><li><span class="bugFix">Correction d'un bug </span>: L'onglet statistique affichait des graphiques erronés depuis la 0.7.2.</li><li>Ajout d'un script de lancement pour Linux.</li></ul>
-<ul></ul>
+<h1>Version 0.7.4 (??/12/2010)</h1>
+<h2>Nouveautés de cette version</h2>
+<ul>
+  <li>Ajout de nouveaux th&egrave;mes visuels (Voir le dialogue accessible par 
+    le menu &quot;Fichier/Pr&eacute;f&eacute;rences&quot;, onglet &quot;Apparence&quot;).</li>
+</ul>
 <hr>
 <h1>Versions précédentes</h1>
-<h2>Version 0.7.2 (23/11/2010)</h2><ul><li>Amélioration mineure du mode pointage (la modification du
+<h2>Version 0.7.3 (26/11/2010)</h2>
+<ul>
+  <li><span class="bugFix">Correction d'un bug </span>: L'onglet statistique affichait 
+    des graphiques erronés depuis la 0.7.2.</li>
+  <li>Ajout d'un script de lancement pour Linux.</li>
+</ul>
+<h2>Version 0.7.2 (23/11/2010)</h2>
+<ul><li>Amélioration mineure du mode pointage (la modification du
 champ date coche automatiquement "Remplacer la date de valeur par").</li><li>Le menu "filtre" est à présent caché dans la vue "Relevés
 de compte" (cette vue ne prend pas en compte le filtrage).</li><li>Ajout de cases à cocher "Dépenses" et "Recettes" dans le
 dialogue "Filtre personnalisé".</li><li>La structure du répertoire contenant l'application est
