--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -18,7 +18,12 @@ color: #ff9900;
 <h2>New in this version</h2>
 <ul>
   <li>Adds new look and feels (see the File/Preferences menu - &quot;Appearence&quot; 
-    tab).</li>
+    tab). We recommend that you try the Nimbus look and feel.</li>
+  <li><span class="bugFix">Fixes a bug</span>: Filtering transactions with an 
+    amount equals to a value was broken (all transactions with amount higher or 
+    equal to the value were selected).</li>
+  <li><span class="bugFix">Fixes a minor bug</span> in the currency converter 
+    tool. When connection to the ECB site failed, no window appeared.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
