--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -20,7 +20,15 @@ color: #ff9900;
 <h2>Nouveautés de cette version</h2>
 <ul>
   <li>Ajout de nouveaux th&egrave;mes visuels (Voir le dialogue accessible par 
-    le menu &quot;Fichier/Pr&eacute;f&eacute;rences&quot;, onglet &quot;Apparence&quot;).</li>
+    le menu &quot;Fichier/Pr&eacute;f&eacute;rences&quot;, onglet &quot;Apparence&quot;).<br>
+    Nous vous recommandons de tester l'apparence &quot;Nimbus&quot;.</li>
+  <li><span class="bugFix">Correction d'un bug</span> : Le filtrage des op&eacute;rations 
+    de montant &eacute;gal &agrave; une certaine valeur ne fonctionnait pas (toutes 
+    les op&eacute;rations avec un montant sup&eacute;rieur ou &eacute;gale &agrave; 
+    la valeur &eacute;taient retenues).</li>
+  <li><span class="bugFix">Correction d'un bug mineur</span> dans le convertisseur 
+    de devises. Lorsque la connexion &agrave; la BCE &eacute;chouait, aucune fen&ecirc;tre 
+    n'apparraissait.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
