--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -14,7 +14,7 @@ color: #ff9900;
 }
 </style></head>
 <body>
-<h1>Version 0.7.4 (12/??/2010)</h1>
+<h1>Version 0.7.4 (12/09/2010)</h1>
 <h2>New in this version</h2>
 <ul>
   <li>Adds new look and feels (see the File/Preferences menu - &quot;Appearence&quot; 
@@ -24,6 +24,7 @@ color: #ff9900;
     equal to the value were selected).</li>
   <li><span class="bugFix">Fixes a minor bug</span> in the currency converter 
     tool. When connection to the ECB site failed, no window appeared.</li>
+  <li><span class="bugFix">Fixes minor bugs</span> in the statement view.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
