--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -16,7 +16,7 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.7.4 (??/12/2010)</h1>
+<h1>Version 0.7.4 (09/12/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
   <li>Ajout de nouveaux th&egrave;mes visuels (Voir le dialogue accessible par 
@@ -29,6 +29,8 @@ color: #ff9900;
   <li><span class="bugFix">Correction d'un bug mineur</span> dans le convertisseur 
     de devises. Lorsque la connexion &agrave; la BCE &eacute;chouait, aucune fen&ecirc;tre 
     n'apparraissait.</li>
+  <li><span class="bugFix">Correction de bugs mineurs</span> dans la vue &quot;r&eacute;lev&eacute; 
+    de comptes'.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
