--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -16,20 +16,18 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.7.4 (09/12/2010)</h1>
+<h1>Version 0.7.4 (12/12/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li>Ajout de nouveaux th&egrave;mes visuels (Voir le dialogue accessible par 
-    le menu &quot;Fichier/Pr&eacute;f&eacute;rences&quot;, onglet &quot;Apparence&quot;).<br>
-    Nous vous recommandons de tester l'apparence &quot;Nimbus&quot;.</li>
-  <li><span class="bugFix">Correction d'un bug</span> : Le filtrage des op&eacute;rations 
-    de montant &eacute;gal &agrave; une certaine valeur ne fonctionnait pas (toutes 
-    les op&eacute;rations avec un montant sup&eacute;rieur ou &eacute;gale &agrave; 
-    la valeur &eacute;taient retenues).</li>
+  
+  <li><span class="bugFix">Correction d'un bug</span> : Le filtrage des opérations 
+    de montant égal à une certaine valeur ne fonctionnait pas (toutes 
+    les opérations avec un montant supérieur ou égale à 
+    la valeur étaient retenues).</li>
   <li><span class="bugFix">Correction d'un bug mineur</span> dans le convertisseur 
-    de devises. Lorsque la connexion &agrave; la BCE &eacute;chouait, aucune fen&ecirc;tre 
+    de devises. Lorsque la connexion à la BCE échouait, aucune fenêtre 
     n'apparraissait.</li>
-  <li><span class="bugFix">Correction de bugs mineurs</span> dans la vue &quot;r&eacute;lev&eacute; 
+  <li><span class="bugFix">Correction de bugs mineurs</span> dans la vue "rélevé 
     de comptes'.</li>
 </ul>
 <hr>
