--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -16,7 +16,7 @@ color: #ff9900;
 <body>
 <h1>Version 0.8.1 (02/??/2011)</h1>
 <h2>New in this version</h2>
-<ul><li><span class="bugFix">Fixes a bug</span>: Setting the country/language didn't change some date format.</li>
+<ul><li><span class="bugFix">Fixes a bug</span>: Setting the country/language didn't change some date format.</li><li>The category-wise expenses pie is now sorted by category name.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
