--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -19,7 +19,7 @@ color: #ff9900;
 <h1>Version 0.8.1 (??/02/2011)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li><span class="bugFix">Correction d'un bu</span><span class="bugFix">g </span>: Le changement de pays/langue ne changeait pas certains format de date.</li></ul>
+  <li><span class="bugFix">Correction d'un bu</span><span class="bugFix">g </span>: Le changement de pays/langue ne changeait pas certains format de date.</li><li>Le camembert de dépenses par catégorie est maintenant trié par libellé croissant de catégorie. </li></ul>
 <hr>
 <h1>Versions précédentes</h1>
 <h2>Version 0.8.0 (04/02/2011)</h2><ul><li>Ajout de nouveaux thèmes visuels (Voir le dialogue accessible par 
