--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -14,9 +14,12 @@ color: #ff9900;
 }
 </style></head>
 <body>
-<h1>Version 0.8.1 (02/??/2011)</h1>
+<h1>Version 0.8.1 (03/??/2011)</h1>
 <h2>New in this version</h2>
-<ul><li><span class="bugFix">Fixes a bug</span>: Setting the country/language didn't change some date format.</li><li>The category-wise expenses pie is now sorted by category name.</li>
+<ul><li><span class="bugFix">Fixes a bug</span>: Setting the country/language didn't change some date format.</li><li><span class="bugFix">Fixes a bug</span>:
+Sometimes, in the "account statements" view, the&nbsp;"Not checked"
+statement was not the most recent one. It led to wrong at beginning and
+and of period for statements placed before the "Not checked" statement.</li><li>The category-wise expenses pie is now sorted by category name.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
