--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -16,10 +16,13 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.8.1 (??/02/2011)</h1>
+<h1>Version 0.8.1 (??/03/2011)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li><span class="bugFix">Correction d'un bug </span>: Le changement de pays/langue ne changeait pas certains format de date.</li><li>Le camembert de dépenses par catégorie est maintenant trié par libellé croissant de catégorie. </li></ul>
+  <li><span class="bugFix">Correction d'un bug </span>: Le changement de pays/langue ne changeait pas certains format de date.</li><li><span class="bugFix">Correction d'un bug </span>: Parfois,
+dans l'onglet "Relevés de compte", le relevé "Non pointé" n'était pas
+le plus récent. Ceci rendait les soldes en début et fin de périodes
+faux pour les relevés situés avant le relevé "Non pointé".</li><li>Le camembert de dépenses par catégorie est maintenant trié par libellé croissant de catégorie. </li></ul>
 <hr>
 <h1>Versions précédentes</h1>
 <h2>Version 0.8.0 (04/02/2011)</h2><ul><li>Ajout de nouveaux thèmes visuels (Voir le dialogue accessible par 
